style(sidenav): fix sidenav title on mobile

--- a/src/app/pages/portal/sidenav/sidenav.component.scss
+++ b/src/app/pages/portal/sidenav/sidenav.component.scss
@@ -43,9 +43,8 @@ igo-panel ::ng-deep .igo-panel-content {
 
 
 div.toolActivated > igo-panel ::ng-deep > div.igo-panel-header {
-  left: 48px;
+  margin-left: 48px;
   position: relative;
-  width: 350px;
 }
 
 #homeButton {
